fix: avoid rerender during multiline input
